# softRaster

./: CMakeLists.txt  CMakeSettings.json  main.cpp
funcs/: CMakeLists.txt  frameBufferObject.cpp  frameBufferObject.h
global/: base.h
math/: CMakeLists.txt  VecMath.cpp
renderPipeline/: CMakeLists.txt  GPU.cpp  GPU.h  RS_WIndow.cpp  RS_WIndow.h  Raster.h  Raster123.h  pipeline.h
